--- a/part-1/style.css
+++ b/part-1/style.css
@@ -14,6 +14,8 @@ html, body{
 
 #camera--view, #camera--sensor, #camera--output{
     transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+
     filter: FlipH;
 }
 
